fixing last epistasis slide

--- a/slides/two-site/index.html
+++ b/slides/two-site/index.html
@@ -1,4 +1,4 @@
-<h3>Epistasis shapes evolutionary paths</h3>
+<h4>Interactions between mutations shape evolutionary paths</h4>
 
 <div style="position: relative;">
     <img class="img-inline" src="slides/two-site/img/two-site-cycle_0.png" />
