--- a/slides/three-site/index.html
+++ b/slides/three-site/index.html
@@ -1,4 +1,4 @@
-<h3>What about epistasis between more than two mutations?</h3>
+<h3>What about interactions between more than two mutations?</h3>
 
 <img src="slides/three-site/img/three-site-cycle.png" />
 
